--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 			<ul class= "ham fundo-roxo central redondo">
 
 
-				 <p><a href="https://www.hamburgadadobem.com.br/"target="_blank"> Hamburgada do Bem</a> Edição de Natal Dez/2018 e edição Arena Corinthias Nov/2018.</p> <img src="Hamburgada.jpeg"alt ='foto trabalho voluntario'> <img src="hambuger.png">
+				 <p><a href="https://www.hamburgadadobem.com.br/"target="_blank"> Hamburgada do Bem</a> Edição de Natal Dez/2018 e edição Arena Corinthias Nov/2018.</p> <img src="volu.jpeg"alt ='foto trabalho voluntario'> <img src="hambuger.png">
 
 				<p><a href="http://diocesedeguarulhos.org.br/pastorais/pastorais-de-servico/pastoral-da-crianca/"target="_blank"> Pastoral da Criança</a>, Cumbica - Guarulhos de Dez/2008 à Dez/2013.</p> <img src="pastoral.png">
 			</ul>
